@@ -54,12 +54,12 @@ ENABLE_TESTING()
 MANAGE_DEPENDENCY(REQUIRES CMAKE VER "2.6.2")
 MANAGE_DEPENDENCY(REQUIRES GIT)
 
-## Workaround for Bug 1115136 otherwise el7 won't work
-MANAGE_DEPENDENCY(REQUIRES BODHI-CLIENT
-    PROGRAM_NAMES bodhi client.py PROGRAM_SEARCH_PATHS /usr/bin/bodhi)
+MANAGE_DEPENDENCY(REQUIRES BODHI-CLIENT)
 MANAGE_DEPENDENCY(REQUIRES KOJI)
 MANAGE_DEPENDENCY(REQUIRES RPM-BUILD)
 MANAGE_DEPENDENCY(REQUIRES FEDPKG)
+MANAGE_DEPENDENCY(REQUIRES CURL)
+MANAGE_DEPENCENCY(REQUIRES PACKAGEDB-CLI)
 
 ## Build requires
 MANAGE_DEPENDENCY(BUILD_REQUIRES CMAKE VER "2.6.2" REQUIRED)
